--- a/pom.xml
+++ b/pom.xml
@@ -11,9 +11,13 @@
 	<groupId>com.devops</groupId>
 	<artifactId>demo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>demo</name>
+    <packaging>pom</packaging>
+    <name>demo</name>
 	<description>Simple devops demo project</description>
-	<properties>
+    <modules>
+        <module>eks_module</module>
+    </modules>
+    <properties>
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
